<resources>
    <string name="app_name">GitHubProjectTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_user_name">Input user name for search</string>
    <string name="search_user">Search user</string>
    <string name="search">Search</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="dark_them">Dark them</string>
    <string name="light_them">Light Them</string>
    <string name="choose_language">Choose Language</string>
    <string name="english_language">English</string>
    <string name="russian_language">Russian</string>
    <string name="followers">Followers</string>
    <string name="default_user">Ivan Ivanov</string>
    <string name="default_status">Online</string>
    <string name="settings_account_text">Account</string>
    <string name="default_email">ivanovIvan@gmail.com</string>
    <string name="settings_label_email">Сlick to change email</string>
    <string name="default_login">ivanovIvan</string>
    <string name="settings_label_login">Сlick to change login</string>
    <string name="default_bio">About me</string>
    <string name="settings_label_bio">Write a little about yourself</string>
    <string name="settings_choose_theme_text">Choose theme</string>
    <string name="settings_label_theme">Сlick to change theme</string>
    <string name="settings_set_dark_theme">Dark</string>
    <string name="settings_set_light_theme">Light</string>
    <string name="default_item_text">item Text</string>
    <string name="default_item_data">01.01.2020</string>
    <string name="defaultLanguage">Language</string>
    <string name="inputUserNameFollowersBtnText">Followers</string>
    <string name="repository_btn_text">Repository</string>
    <string name="followers_btn_text">Followers</string>
    <string name="settings_header">Settings</string>
</resources>