<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context=".view.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_block"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryBase">


        <TextView
            android:id="@+id/settings_header_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginVertical="@dimen/vertical_margin"
            android:text="@string/settings_header"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/choose_theme_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_choose_theme_text"
        style="@style/table_of_contents"

        />
    <LinearLayout
        android:id="@+id/settings_light_tv_button"
        style="@style/Buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_text_account">

        <TextView
            android:id="@+id/settings_light_theme_text"
            style="@style/normalText"
            android:text="@string/settings_set_light_theme" />

        <TextView
            android:id="@+id/setting_label_light_theme"
            style="@style/smallText"
            android:text="@string/settings_label_theme" />
    </LinearLayout>

    <View
        style="@style/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_phone_number" />

    <LinearLayout
        android:id="@+id/settings_dark_tv_button"
        style="@style/Buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_text_account">

        <TextView
            android:id="@+id/settings_dark_theme_text"
            style="@style/normalText"
            android:text="@string/settings_set_dark_theme" />

        <TextView
            android:id="@+id/setting_label_theme"
            style="@style/smallText"
            android:text="@string/settings_label_theme" />
    </LinearLayout>

    <View
        style="@style/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_phone_number" />




</LinearLayout>



