<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    tools:context=".view.UserFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_fragment_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryBase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/input_user_name_user_photo"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:src="@drawable/default_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginVertical="@dimen/vertical_margin"
            android:text="@string/default_user"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/input_user_name_user_photo"
            app:layout_constraintTop_toTopOf="@+id/input_user_name_user_photo" />

    </androidx.constraintlayout.widget.ConstraintLayout>





    <LinearLayout
        android:id="@+id/user_fragment_repository_btn"
        style="@style/Buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_fragment_header">

        <TextView
            android:id="@+id/user_fragment_repository_text"
            style="@style/normalText"
            android:text="@string/repository_btn_text" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_user_name_followers_btn"
        style="@style/Buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_fragment_repository_btn">

        <TextView
            android:id="@+id/user_fragment_followers_text"
            style="@style/normalText"
            android:text="@string/followers_btn_text" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>